gcc/testsuite/gdc.test/runnable/link13043.d
// PERMUTE_ARGS: -g -inline -version=bug -release -O
// EXTRA_FILES: imports/link13043a.d
import imports.link13043a;

void main() {}
